Wrong Theme URI

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: The Tandem Bike Theme
-Theme URI: http://www.vmcc.dk
+Theme URI: http://vodskovmotionscykelclub.dk/
 Description: Extends The Bike Theme to support and style bbPress.
 Author: Thomas Clausen
 Author URI: http://www.thomasclausen.dk/
